# advent_of_code

./: .gitignore  LICENSE  day10.hs  day11.hs  day12.hs  day12.md  day13.hs  day2.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  p1.hs  shell.nix
2019/: Intcode.hs  day12-2.hs  day13.hs  day3.hs  day9.hs
2020/: Ary.hs  SimpleParse.hs  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  template.hs
2021/: .gitignore  SimpleParse.hs  Tropes.hs  Tropmi.hs  advent-of-code-data  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  default.nix  shell.nix  start-today  template.hs
2022/: SimpleParse.hs  Tropes.hs  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  today.hs
2023/: Tropes.hs  TwoD.hs  dat.sh  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day17.hs  day2.hs  day3.hs  day4.hs  day5  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  ex.sh  flake.nix  start-today  template.hs  today  today.prof
2024/: Array.hs  HMap.hs  LICENSE  Map.hs  Seq.hs  Set.hs  SimpleParse.hs  Tropes.hs  TwoD.hs  aoc2024.cabal  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  ex.sh  start-today  template.hs
template/: start-today
